--- a/index.htm
+++ b/index.htm
@@ -30,4 +30,5 @@
 [<A HREF="osnova.htm"> Основная часть </A>] &nbsp
 [<A HREF="zakluchenie.htm"> Заключение </A>] &nbsp
 [<A HREF="literatura.htm"> Список используемой в работе литературы </A>] &nbsp
-</P> </body> </HTML>
+</P> </body> 
+</HTML>
