--- a/index.htm
+++ b/index.htm
@@ -1,13 +1,13 @@
 <HTML>
 <HEAD>
-<TITLE> Платежная система Юнион Кард</TITLE>
+<TITLE> РџР»Р°С‚РµР¶РЅР°СЏ СЃРёСЃС‚РµРјР° Р®РЅРёРѕРЅ РљР°СЂРґ</TITLE>
 </HEAD>
 <body bgcolor="yellow">
 <FONT COLOR="blue">
 
-<H1 ALIGN="center"> Платежная система Юнион Кард </H1>
+<H1 ALIGN="center"> РџР»Р°С‚РµР¶РЅР°СЏ СЃРёСЃС‚РµРјР° Р®РЅРёРѕРЅ РљР°СЂРґ </H1>
 <marquee>
-<H1 ALIGN="center"> ДОБРО ПОЖАЛОВАТЬ </H1>
+<H1 ALIGN="center"> Р”РћР‘Р Рћ РџРћР–РђР›РћР’РђРўР¬ </H1>
 </marquee>
 </FONT>
 <HR>
@@ -15,20 +15,20 @@
 <table align="center">
 <tr>
 <td Haight="200" width="300" border="3" > 
-<IMG SRC="Рисунок1.jpg" Haight="200" width="300" ALT="Платежная система Юнион Кард" ALIGN="center"> </td>
+<IMG SRC="Р РёСЃСѓРЅРѕРє1.jpg" Haight="200" width="300" ALT="РџР»Р°С‚РµР¶РЅР°СЏ СЃРёСЃС‚РµРјР° Р®РЅРёРѕРЅ РљР°СЂРґ" ALIGN="center"> </td>
 <td Haight="200" width="300" border="3" > 
-<IMG SRC="Рисунок2.jpg" Haight="200" width="300" ALT="UnionCard " ALIGN="center"> </td>
+<IMG SRC="Р РёСЃСѓРЅРѕРє2.jpg" Haight="200" width="300" ALT="UnionCard " ALIGN="center"> </td>
 </tr>
 <tr>
 <td Haight="200" width="300" border="3" > 
-<IMG SRC="Рисунок3.jpg" Haight="200" width="300" ALT="Карточки с микроконтроллером Atmel" ALIGN="center"> </td>
+<IMG SRC="Р РёСЃСѓРЅРѕРє3.jpg" Haight="200" width="300" ALT="РљР°СЂС‚РѕС‡РєРё СЃ РјРёРєСЂРѕРєРѕРЅС‚СЂРѕР»Р»РµСЂРѕРј Atmel" ALIGN="center"> </td>
 <td Haight="150" width="300" border="3" > 
-<IMG SRC="Рисунок4.jpg" Haight="100" width="300" ALT="Список литературы" ALIGN="center"> </td>
+<IMG SRC="Р РёСЃСѓРЅРѕРє4.jpg" Haight="100" width="300" ALT="РЎРїРёСЃРѕРє Р»РёС‚РµСЂР°С‚СѓСЂС‹" ALIGN="center"> </td>
 </tr>
 <P ALIGN="center">
-[<A HREF="vvedenie.htm"> Введение</A>] &nbsp
-[<A HREF="osnova.htm"> Основная часть </A>] &nbsp
-[<A HREF="zakluchenie.htm"> Заключение </A>] &nbsp
-[<A HREF="literatura.htm"> Список используемой в работе литературы </A>] &nbsp
+[<A HREF="vvedenie.htm"> Р’РІРµРґРµРЅРёРµ</A>] &nbsp
+[<A HREF="osnova.htm"> РћСЃРЅРѕРІРЅР°СЏ С‡Р°СЃС‚СЊ </A>] &nbsp
+[<A HREF="zakluchenie.htm"> Р—Р°РєР»СЋС‡РµРЅРёРµ </A>] &nbsp
+[<A HREF="literatura.htm"> РЎРїРёСЃРѕРє РёСЃРїРѕР»СЊР·СѓРµРјРѕР№ РІ СЂР°Р±РѕС‚Рµ Р»РёС‚РµСЂР°С‚СѓСЂС‹ </A>] &nbsp
 </P> </body> 
 </HTML>
