--- a/literatura.htm
+++ b/literatura.htm
@@ -1,32 +1,32 @@
 <HTML>
 <HEAD>
-<TITLE>Платежная система Юнион Кард</TITLE>
+<TITLE>РџР»Р°С‚РµР¶РЅР°СЏ СЃРёСЃС‚РµРјР° Р®РЅРёРѕРЅ РљР°СЂРґ</TITLE>
 </HEAD>
 <body bgcolor="ffcc66">
 <marquee>
-<H1 ALIGN="center"> Платежная система Юнион Кард 
+<H1 ALIGN="center"> РџР»Р°С‚РµР¶РЅР°СЏ СЃРёСЃС‚РµРјР° Р®РЅРёРѕРЅ РљР°СЂРґ 
 </marquee>
 </H1>
 <HR>
 <FONT COLOR="993300">
-<H2 ALIGN="center"> Список используемой в работе литературы</H2>
+<H2 ALIGN="center"> РЎРїРёСЃРѕРє РёСЃРїРѕР»СЊР·СѓРµРјРѕР№ РІ СЂР°Р±РѕС‚Рµ Р»РёС‚РµСЂР°С‚СѓСЂС‹</H2>
 </FONT>
 <HR>
 <P ALIGN="center">
-[<A HREF="index.htm"> Главная</A>] &nbsp
-[<A HREF="vvedenie.htm"> Введение</A>] &nbsp
-[<A HREF="osnova.htm"> Основная часть </A>] &nbsp
-[<A HREF="zakluchenie.htm"> Заключение </A>] &nbsp
-[<A HREF="literatura.htm"> Список используемой в работе литературы  </A>] &nbsp
+[<A HREF="index.htm"> Р“Р»Р°РІРЅР°СЏ</A>] &nbsp
+[<A HREF="vvedenie.htm"> Р’РІРµРґРµРЅРёРµ</A>] &nbsp
+[<A HREF="osnova.htm"> РћСЃРЅРѕРІРЅР°СЏ С‡Р°СЃС‚СЊ </A>] &nbsp
+[<A HREF="zakluchenie.htm"> Р—Р°РєР»СЋС‡РµРЅРёРµ </A>] &nbsp
+[<A HREF="literatura.htm"> РЎРїРёСЃРѕРє РёСЃРїРѕР»СЊР·СѓРµРјРѕР№ РІ СЂР°Р±РѕС‚Рµ Р»РёС‚РµСЂР°С‚СѓСЂС‹  </A>] &nbsp
 
-<IMG SRC="Рисунок4.jpg" haight="100" width="300" ALT="Источники" ALIGN="right">
+<IMG SRC="Р РёСЃСѓРЅРѕРє4.jpg" haight="100" width="300" ALT="РСЃС‚РѕС‡РЅРёРєРё" ALIGN="right">
 <P ALIGN="left"> 
    <OL>
-     <LI> Интернет-ресурс: wikipedia.org/wiki/Union_Card 
-     <LI> Интернет-ресурс: www.rbcard.com/paysystem/pay_uc.htm
-     <LI> Интернет-ресурс: works.tarefer.ru/8/100185/index.html
- <LI> Учебник Липис А., Маршалл Т. “Электронная система денежных расчетов”
- <LI> Учебник Манжино Б. “Новые времена, новые деньги”- Бизнес и банки
+     <LI> РРЅС‚РµСЂРЅРµС‚-СЂРµСЃСѓСЂСЃ: wikipedia.org/wiki/Union_Card 
+     <LI> РРЅС‚РµСЂРЅРµС‚-СЂРµСЃСѓСЂСЃ: www.rbcard.com/paysystem/pay_uc.htm
+     <LI> РРЅС‚РµСЂРЅРµС‚-СЂРµСЃСѓСЂСЃ: works.tarefer.ru/8/100185/index.html
+ <LI> РЈС‡РµР±РЅРёРє Р›РёРїРёСЃ Рђ., РњР°СЂС€Р°Р»Р» Рў. вЂњР­Р»РµРєС‚СЂРѕРЅРЅР°СЏ СЃРёСЃС‚РµРјР° РґРµРЅРµР¶РЅС‹С… СЂР°СЃС‡РµС‚РѕРІвЂќ
+ <LI> РЈС‡РµР±РЅРёРє РњР°РЅР¶РёРЅРѕ Р‘. вЂњРќРѕРІС‹Рµ РІСЂРµРјРµРЅР°, РЅРѕРІС‹Рµ РґРµРЅСЊРіРёвЂќ- Р‘РёР·РЅРµСЃ Рё Р±Р°РЅРєРё
 </OL>
 <BR>
 </body> 
