--- a/zakluchenie.htm
+++ b/zakluchenie.htm
@@ -1,45 +1,45 @@
 <HTML>
 <HEAD>
-<TITLE> Платежная система Юнион Кард </TITLE>
+<TITLE> РџР»Р°С‚РµР¶РЅР°СЏ СЃРёСЃС‚РµРјР° Р®РЅРёРѕРЅ РљР°СЂРґ </TITLE>
 </HEAD>
 <body bgcolor="00cc66">
 <marquee>
-<H1 ALIGN="center"> Платежная система Юнион Кард 
+<H1 ALIGN="center"> РџР»Р°С‚РµР¶РЅР°СЏ СЃРёСЃС‚РµРјР° Р®РЅРёРѕРЅ РљР°СЂРґ 
 </marquee>
 </H1>
 <HR>
 <FONT COLOR="black">
-<H2 ALIGN="center"> Заключение </H2>
+<H2 ALIGN="center"> Р—Р°РєР»СЋС‡РµРЅРёРµ </H2>
 </FONT>
 <HR>
 <P ALIGN="center">
-[<A HREF="index.htm"> Главная</A>] &nbsp
-[<A HREF="vvedenie.htm"> Введение</A>] &nbsp
-[<A HREF="osnova.htm"> Основная часть </A>] &nbsp
-[<A HREF="zakluchenie.htm"> Заключение </A>] &nbsp
-[<A HREF="literatura.htm"> Список используемой в работе литературы  </A>] &nbsp
-<IMG SRC="Рисунок3.jpg" haight="200" width="300" ALT="Карточки с микроконтроллером Atmel" ALIGN="right">
+[<A HREF="index.htm"> Р“Р»Р°РІРЅР°СЏ</A>] &nbsp
+[<A HREF="vvedenie.htm"> Р’РІРµРґРµРЅРёРµ</A>] &nbsp
+[<A HREF="osnova.htm"> РћСЃРЅРѕРІРЅР°СЏ С‡Р°СЃС‚СЊ </A>] &nbsp
+[<A HREF="zakluchenie.htm"> Р—Р°РєР»СЋС‡РµРЅРёРµ </A>] &nbsp
+[<A HREF="literatura.htm"> РЎРїРёСЃРѕРє РёСЃРїРѕР»СЊР·СѓРµРјРѕР№ РІ СЂР°Р±РѕС‚Рµ Р»РёС‚РµСЂР°С‚СѓСЂС‹  </A>] &nbsp
+<IMG SRC="Р РёСЃСѓРЅРѕРє3.jpg" haight="200" width="300" ALT="РљР°СЂС‚РѕС‡РєРё СЃ РјРёРєСЂРѕРєРѕРЅС‚СЂРѕР»Р»РµСЂРѕРј Atmel" ALIGN="right">
 <P ALIGN="left"> 
-<P>Одним из важнейших аспектов устойчивости платежной системы является обеспечение расчётов. Эффективное построение системы Уполномоченных Расчётных Банков позволило организовать цельную межбанковскую Платежную систему, а не систему из разрозненных банков, пытающихся своими силами обеспечить расчеты в других банках. Благодаря отслеживанию в режиме реального времени расчетных остатков в Уполномоченных Расчетных Банках обеспечена финансовая стабильность Системы. Необходимо отметить, что даже после кризиса августа 1998 г.  <B> межбанковские расчеты в системе "Юнион Кард" </B> практически не прекращались. </P>
-<P>Несомненное <B> преимущество Платёжной системы "Юнион Кард" </B> заключается в том, что она обладает всем комплексом необходимых атрибутов платёжной системы:</P>
+<P>РћРґРЅРёРј РёР· РІР°Р¶РЅРµР№С€РёС… Р°СЃРїРµРєС‚РѕРІ СѓСЃС‚РѕР№С‡РёРІРѕСЃС‚Рё РїР»Р°С‚РµР¶РЅРѕР№ СЃРёСЃС‚РµРјС‹ СЏРІР»СЏРµС‚СЃСЏ РѕР±РµСЃРїРµС‡РµРЅРёРµ СЂР°СЃС‡С‘С‚РѕРІ. Р­С„С„РµРєС‚РёРІРЅРѕРµ РїРѕСЃС‚СЂРѕРµРЅРёРµ СЃРёСЃС‚РµРјС‹ РЈРїРѕР»РЅРѕРјРѕС‡РµРЅРЅС‹С… Р Р°СЃС‡С‘С‚РЅС‹С… Р‘Р°РЅРєРѕРІ РїРѕР·РІРѕР»РёР»Рѕ РѕСЂРіР°РЅРёР·РѕРІР°С‚СЊ С†РµР»СЊРЅСѓСЋ РјРµР¶Р±Р°РЅРєРѕРІСЃРєСѓСЋ РџР»Р°С‚РµР¶РЅСѓСЋ СЃРёСЃС‚РµРјСѓ, Р° РЅРµ СЃРёСЃС‚РµРјСѓ РёР· СЂР°Р·СЂРѕР·РЅРµРЅРЅС‹С… Р±Р°РЅРєРѕРІ, РїС‹С‚Р°СЋС‰РёС…СЃСЏ СЃРІРѕРёРјРё СЃРёР»Р°РјРё РѕР±РµСЃРїРµС‡РёС‚СЊ СЂР°СЃС‡РµС‚С‹ РІ РґСЂСѓРіРёС… Р±Р°РЅРєР°С…. Р‘Р»Р°РіРѕРґР°СЂСЏ РѕС‚СЃР»РµР¶РёРІР°РЅРёСЋ РІ СЂРµР¶РёРјРµ СЂРµР°Р»СЊРЅРѕРіРѕ РІСЂРµРјРµРЅРё СЂР°СЃС‡РµС‚РЅС‹С… РѕСЃС‚Р°С‚РєРѕРІ РІ РЈРїРѕР»РЅРѕРјРѕС‡РµРЅРЅС‹С… Р Р°СЃС‡РµС‚РЅС‹С… Р‘Р°РЅРєР°С… РѕР±РµСЃРїРµС‡РµРЅР° С„РёРЅР°РЅСЃРѕРІР°СЏ СЃС‚Р°Р±РёР»СЊРЅРѕСЃС‚СЊ РЎРёСЃС‚РµРјС‹. РќРµРѕР±С…РѕРґРёРјРѕ РѕС‚РјРµС‚РёС‚СЊ, С‡С‚Рѕ РґР°Р¶Рµ РїРѕСЃР»Рµ РєСЂРёР·РёСЃР° Р°РІРіСѓСЃС‚Р° 1998 Рі.  <B> РјРµР¶Р±Р°РЅРєРѕРІСЃРєРёРµ СЂР°СЃС‡РµС‚С‹ РІ СЃРёСЃС‚РµРјРµ "Р®РЅРёРѕРЅ РљР°СЂРґ" </B> РїСЂР°РєС‚РёС‡РµСЃРєРё РЅРµ РїСЂРµРєСЂР°С‰Р°Р»РёСЃСЊ. </P>
+<P>РќРµСЃРѕРјРЅРµРЅРЅРѕРµ <B> РїСЂРµРёРјСѓС‰РµСЃС‚РІРѕ РџР»Р°С‚С‘Р¶РЅРѕР№ СЃРёСЃС‚РµРјС‹ "Р®РЅРёРѕРЅ РљР°СЂРґ" </B> Р·Р°РєР»СЋС‡Р°РµС‚СЃСЏ РІ С‚РѕРј, С‡С‚Рѕ РѕРЅР° РѕР±Р»Р°РґР°РµС‚ РІСЃРµРј РєРѕРјРїР»РµРєСЃРѕРј РЅРµРѕР±С…РѕРґРёРјС‹С… Р°С‚СЂРёР±СѓС‚РѕРІ РїР»Р°С‚С‘Р¶РЅРѕР№ СЃРёСЃС‚РµРјС‹:</P>
 <UL TYPE= "square">
-           <LI> зарегистрированный товарный знак и знак обслуживания;
-           <LI> действующие соглашения между Участниками Платежной системы, которые обеспечивают иерархическое двухуровневое построение системы и эффективную систему расчетов;
-           <LI> принятые Участниками Правила Платежной системы "Юнион Кард";
-          <LI>  широкая сеть обслуживания в России и СНГ, насчитывающая наибольшее количество Участников (эмитентов и эквайеров);
-<LI>  полнофункциональный универсальный карточный продукт.    
+           <LI> Р·Р°СЂРµРіРёСЃС‚СЂРёСЂРѕРІР°РЅРЅС‹Р№ С‚РѕРІР°СЂРЅС‹Р№ Р·РЅР°Рє Рё Р·РЅР°Рє РѕР±СЃР»СѓР¶РёРІР°РЅРёСЏ;
+           <LI> РґРµР№СЃС‚РІСѓСЋС‰РёРµ СЃРѕРіР»Р°С€РµРЅРёСЏ РјРµР¶РґСѓ РЈС‡Р°СЃС‚РЅРёРєР°РјРё РџР»Р°С‚РµР¶РЅРѕР№ СЃРёСЃС‚РµРјС‹, РєРѕС‚РѕСЂС‹Рµ РѕР±РµСЃРїРµС‡РёРІР°СЋС‚ РёРµСЂР°СЂС…РёС‡РµСЃРєРѕРµ РґРІСѓС…СѓСЂРѕРІРЅРµРІРѕРµ РїРѕСЃС‚СЂРѕРµРЅРёРµ СЃРёСЃС‚РµРјС‹ Рё СЌС„С„РµРєС‚РёРІРЅСѓСЋ СЃРёСЃС‚РµРјСѓ СЂР°СЃС‡РµС‚РѕРІ;
+           <LI> РїСЂРёРЅСЏС‚С‹Рµ РЈС‡Р°СЃС‚РЅРёРєР°РјРё РџСЂР°РІРёР»Р° РџР»Р°С‚РµР¶РЅРѕР№ СЃРёСЃС‚РµРјС‹ "Р®РЅРёРѕРЅ РљР°СЂРґ";
+          <LI>  С€РёСЂРѕРєР°СЏ СЃРµС‚СЊ РѕР±СЃР»СѓР¶РёРІР°РЅРёСЏ РІ Р РѕСЃСЃРёРё Рё РЎРќР“, РЅР°СЃС‡РёС‚С‹РІР°СЋС‰Р°СЏ РЅР°РёР±РѕР»СЊС€РµРµ РєРѕР»РёС‡РµСЃС‚РІРѕ РЈС‡Р°СЃС‚РЅРёРєРѕРІ (СЌРјРёС‚РµРЅС‚РѕРІ Рё СЌРєРІР°Р№РµСЂРѕРІ);
+<LI>  РїРѕР»РЅРѕС„СѓРЅРєС†РёРѕРЅР°Р»СЊРЅС‹Р№ СѓРЅРёРІРµСЂСЃР°Р»СЊРЅС‹Р№ РєР°СЂС‚РѕС‡РЅС‹Р№ РїСЂРѕРґСѓРєС‚.    
 </UL>
 
-<P>  После объединения сетей обслуживания пластиковых карт СТБ и «Юнион Кард», новая инфраструктура (платежная и расчетная) будет обслуживать более 650 банков-участников и их филиалов, предлагать клиентам сервис в 3500 банкоматов и 26 тысячах точек торговли и сервиса. </P>
-<P>  В системе, таким образом, будут работать более 6 миллионов карт. Ее присутствие охватит более 90 процентов городов России и стран Содружества.</P> 
-<P>Одним из важнейших показателей любой платежной системы на базе пластиковых карт наряду с временем обслуживания клиента и вероятности ложного отказа в обслуживании является безопасность системы. При создании платежных систем уделяют очень большое внимания защите и обеспечению их безопасности. Обычно различается внутренняя и внешняя безопасность. Внутренняя безопасность должна обеспечивать целостность программ и данных, нормальную работу всей системы. Внешняя –  должна защищать от любых угрожающих сбоев в системе и проникновений. </P>
-<P>  Единственный способ уменьшить потери, связанные с возможным мошенничеством при использовании магнитных карт, – <B> оперативная авторизации в процессинговом центре и проверка PIN-кода </B> в каждой торговой точке и в каждом банкомате. Последние десять лет банки во всем мире инвестировали многие миллионы долларов в развитие телекоммуникаций. В результате этого практически все торговые точки и банкоматы сегодня работают в режиме оперативной авторизации. </P>
+<P>  РџРѕСЃР»Рµ РѕР±СЉРµРґРёРЅРµРЅРёСЏ СЃРµС‚РµР№ РѕР±СЃР»СѓР¶РёРІР°РЅРёСЏ РїР»Р°СЃС‚РёРєРѕРІС‹С… РєР°СЂС‚ РЎРўР‘ Рё В«Р®РЅРёРѕРЅ РљР°СЂРґВ», РЅРѕРІР°СЏ РёРЅС„СЂР°СЃС‚СЂСѓРєС‚СѓСЂР° (РїР»Р°С‚РµР¶РЅР°СЏ Рё СЂР°СЃС‡РµС‚РЅР°СЏ) Р±СѓРґРµС‚ РѕР±СЃР»СѓР¶РёРІР°С‚СЊ Р±РѕР»РµРµ 650 Р±Р°РЅРєРѕРІ-СѓС‡Р°СЃС‚РЅРёРєРѕРІ Рё РёС… С„РёР»РёР°Р»РѕРІ, РїСЂРµРґР»Р°РіР°С‚СЊ РєР»РёРµРЅС‚Р°Рј СЃРµСЂРІРёСЃ РІ 3500 Р±Р°РЅРєРѕРјР°С‚РѕРІ Рё 26 С‚С‹СЃСЏС‡Р°С… С‚РѕС‡РµРє С‚РѕСЂРіРѕРІР»Рё Рё СЃРµСЂРІРёСЃР°. </P>
+<P>  Р’ СЃРёСЃС‚РµРјРµ, С‚Р°РєРёРј РѕР±СЂР°Р·РѕРј, Р±СѓРґСѓС‚ СЂР°Р±РѕС‚Р°С‚СЊ Р±РѕР»РµРµ 6 РјРёР»Р»РёРѕРЅРѕРІ РєР°СЂС‚. Р•Рµ РїСЂРёСЃСѓС‚СЃС‚РІРёРµ РѕС…РІР°С‚РёС‚ Р±РѕР»РµРµ 90 РїСЂРѕС†РµРЅС‚РѕРІ РіРѕСЂРѕРґРѕРІ Р РѕСЃСЃРёРё Рё СЃС‚СЂР°РЅ РЎРѕРґСЂСѓР¶РµСЃС‚РІР°.</P> 
+<P>РћРґРЅРёРј РёР· РІР°Р¶РЅРµР№С€РёС… РїРѕРєР°Р·Р°С‚РµР»РµР№ Р»СЋР±РѕР№ РїР»Р°С‚РµР¶РЅРѕР№ СЃРёСЃС‚РµРјС‹ РЅР° Р±Р°Р·Рµ РїР»Р°СЃС‚РёРєРѕРІС‹С… РєР°СЂС‚ РЅР°СЂСЏРґСѓ СЃ РІСЂРµРјРµРЅРµРј РѕР±СЃР»СѓР¶РёРІР°РЅРёСЏ РєР»РёРµРЅС‚Р° Рё РІРµСЂРѕСЏС‚РЅРѕСЃС‚Рё Р»РѕР¶РЅРѕРіРѕ РѕС‚РєР°Р·Р° РІ РѕР±СЃР»СѓР¶РёРІР°РЅРёРё СЏРІР»СЏРµС‚СЃСЏ Р±РµР·РѕРїР°СЃРЅРѕСЃС‚СЊ СЃРёСЃС‚РµРјС‹. РџСЂРё СЃРѕР·РґР°РЅРёРё РїР»Р°С‚РµР¶РЅС‹С… СЃРёСЃС‚РµРј СѓРґРµР»СЏСЋС‚ РѕС‡РµРЅСЊ Р±РѕР»СЊС€РѕРµ РІРЅРёРјР°РЅРёСЏ Р·Р°С‰РёС‚Рµ Рё РѕР±РµСЃРїРµС‡РµРЅРёСЋ РёС… Р±РµР·РѕРїР°СЃРЅРѕСЃС‚Рё. РћР±С‹С‡РЅРѕ СЂР°Р·Р»РёС‡Р°РµС‚СЃСЏ РІРЅСѓС‚СЂРµРЅРЅСЏСЏ Рё РІРЅРµС€РЅСЏСЏ Р±РµР·РѕРїР°СЃРЅРѕСЃС‚СЊ. Р’РЅСѓС‚СЂРµРЅРЅСЏСЏ Р±РµР·РѕРїР°СЃРЅРѕСЃС‚СЊ РґРѕР»Р¶РЅР° РѕР±РµСЃРїРµС‡РёРІР°С‚СЊ С†РµР»РѕСЃС‚РЅРѕСЃС‚СЊ РїСЂРѕРіСЂР°РјРј Рё РґР°РЅРЅС‹С…, РЅРѕСЂРјР°Р»СЊРЅСѓСЋ СЂР°Р±РѕС‚Сѓ РІСЃРµР№ СЃРёСЃС‚РµРјС‹. Р’РЅРµС€РЅСЏСЏ вЂ“  РґРѕР»Р¶РЅР° Р·Р°С‰РёС‰Р°С‚СЊ РѕС‚ Р»СЋР±С‹С… СѓРіСЂРѕР¶Р°СЋС‰РёС… СЃР±РѕРµРІ РІ СЃРёСЃС‚РµРјРµ Рё РїСЂРѕРЅРёРєРЅРѕРІРµРЅРёР№. </P>
+<P>  Р•РґРёРЅСЃС‚РІРµРЅРЅС‹Р№ СЃРїРѕСЃРѕР± СѓРјРµРЅСЊС€РёС‚СЊ РїРѕС‚РµСЂРё, СЃРІСЏР·Р°РЅРЅС‹Рµ СЃ РІРѕР·РјРѕР¶РЅС‹Рј РјРѕС€РµРЅРЅРёС‡РµСЃС‚РІРѕРј РїСЂРё РёСЃРїРѕР»СЊР·РѕРІР°РЅРёРё РјР°РіРЅРёС‚РЅС‹С… РєР°СЂС‚, вЂ“ <B> РѕРїРµСЂР°С‚РёРІРЅР°СЏ Р°РІС‚РѕСЂРёР·Р°С†РёРё РІ РїСЂРѕС†РµСЃСЃРёРЅРіРѕРІРѕРј С†РµРЅС‚СЂРµ Рё РїСЂРѕРІРµСЂРєР° PIN-РєРѕРґР° </B> РІ РєР°Р¶РґРѕР№ С‚РѕСЂРіРѕРІРѕР№ С‚РѕС‡РєРµ Рё РІ РєР°Р¶РґРѕРј Р±Р°РЅРєРѕРјР°С‚Рµ. РџРѕСЃР»РµРґРЅРёРµ РґРµСЃСЏС‚СЊ Р»РµС‚ Р±Р°РЅРєРё РІРѕ РІСЃРµРј РјРёСЂРµ РёРЅРІРµСЃС‚РёСЂРѕРІР°Р»Рё РјРЅРѕРіРёРµ РјРёР»Р»РёРѕРЅС‹ РґРѕР»Р»Р°СЂРѕРІ РІ СЂР°Р·РІРёС‚РёРµ С‚РµР»РµРєРѕРјРјСѓРЅРёРєР°С†РёР№. Р’ СЂРµР·СѓР»СЊС‚Р°С‚Рµ СЌС‚РѕРіРѕ РїСЂР°РєС‚РёС‡РµСЃРєРё РІСЃРµ С‚РѕСЂРіРѕРІС‹Рµ С‚РѕС‡РєРё Рё Р±Р°РЅРєРѕРјР°С‚С‹ СЃРµРіРѕРґРЅСЏ СЂР°Р±РѕС‚Р°СЋС‚ РІ СЂРµР¶РёРјРµ РѕРїРµСЂР°С‚РёРІРЅРѕР№ Р°РІС‚РѕСЂРёР·Р°С†РёРё. </P>
 
 <P ALIGN="center">
-[<A HREF="index.htm"> Главная</A>] &nbsp
-[<A HREF="vvedenie.htm"> Введение</A>] &nbsp
-[<A HREF="osnova.htm"> Основная часть </A>] &nbsp
-[<A HREF="zakluchenie.htm"> Заключение </A>] &nbsp
-[<A HREF="literatura.htm"> Список используемой в работе литературы  </A>] &nbsp
+[<A HREF="index.htm"> Р“Р»Р°РІРЅР°СЏ</A>] &nbsp
+[<A HREF="vvedenie.htm"> Р’РІРµРґРµРЅРёРµ</A>] &nbsp
+[<A HREF="osnova.htm"> РћСЃРЅРѕРІРЅР°СЏ С‡Р°СЃС‚СЊ </A>] &nbsp
+[<A HREF="zakluchenie.htm"> Р—Р°РєР»СЋС‡РµРЅРёРµ </A>] &nbsp
+[<A HREF="literatura.htm"> РЎРїРёСЃРѕРє РёСЃРїРѕР»СЊР·СѓРµРјРѕР№ РІ СЂР°Р±РѕС‚Рµ Р»РёС‚РµСЂР°С‚СѓСЂС‹  </A>] &nbsp
 </P>  </body> 
 </HTML>
